--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.14.0",
     "@nuxtjs/eslint-config-typescript": "8.0.0",
-    "@nuxtjs/eslint-module": "3.0.2",
     "@vueuse/components": "7.4.0",
     "@vueuse/nuxt": "7.4.0",
     "eslint": "8.5.0",
@@ -21,11 +21,11 @@
     "typescript": "4.5.4"
   },
   "dependencies": {
-    "chart.js": "3.3.2",
+    "chart.js": "3.6.2",
     "core-js": "3.20.0",
     "primeflex": "3.1.2",
     "primeicons": "5.0.0",
     "primevue": "3.10.0",
-    "prismjs": "1.9.0"
+    "prismjs": "1.25.0"
   }
 }
