--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,6 @@
 {
   "extends": [
-    "config:base"
-  ],
-  "packageRules": [
-    {
-      "packageNames": ["nuxt3"],
-      "groupName": "Nuxt 3 core packages"
-    }
+    "@nuxt",
+    "@nuxtjs"
   ]
 }
