--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,11 @@
 {
   "extends": [
-    "nuxt3"
+    "config:base"
+  ],
+  "packageRules": [
+    {
+      "packageNames": ["@nuxt/kit", "@nuxt/nitro", "@nuxt/schema"],
+      "groupName": "Nuxt TypeScript core packages"
+    }
   ]
 }
