--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
     "start": "node .output/server/index.mjs",
@@ -17,7 +18,7 @@
     "nuxt3": "latest",
     "patch-vue-directive-ssr": "0.0.1",
     "sass": "1.45.0",
-    "sass-loader": "10.2.0",
+    "sass-loader": "12.4.0",
     "typescript": "4.5.4"
   },
   "dependencies": {
