--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint:fix": "eslint --fix --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "0.16.0",
+    "@antfu/eslint-config": "^0.23.1",
     "@nuxtjs/eslint-config-typescript": "8.0.0",
     "@vueuse/components": "7.7.1",
     "@vueuse/nuxt": "7.7.1",
     "eslint": "8.15.0",
-    "eslint-plugin-nuxt": "3.1.0",
-    "nuxt": "3.0.0-rc.2",
+    "eslint-plugin-nuxt": "3.2.0",
+    "nuxt": "3.0.0-rc.3",
     "patch-vue-directive-ssr": "0.0.1",
     "sass": "1.51.0",
-    "sass-loader": "12.4.0",
+    "sass-loader": "12.6.0",
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "chart.js": "3.7.0",
-    "core-js": "3.20.1",
+    "chart.js": "3.7.1",
+    "core-js": "3.22.5",
     "primeflex": "3.1.2",
     "primeicons": "5.0.0",
-    "primevue": "3.11.0",
-    "prismjs": "1.25.0"
+    "primevue": "^3.12.6",
+    "prismjs": "1.28.0"
   }
 }
