--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.23.1",
-    "@nuxtjs/eslint-config-typescript": "8.0.0",
-    "@vueuse/components": "7.7.1",
-    "@vueuse/nuxt": "7.7.1",
-    "eslint": "8.15.0",
-    "eslint-plugin-nuxt": "3.2.0",
-    "nuxt": "3.0.0-rc.3",
-    "patch-vue-directive-ssr": "0.0.1",
-    "sass": "1.51.0",
-    "sass-loader": "12.6.0",
-    "typescript": "4.5.5"
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@vueuse/components": "^8.5.0",
+    "@vueuse/nuxt": "^8.5.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "nuxt": "^3.0.0-rc.3",
+    "patch-vue-directive-ssr": "^0.0.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "chart.js": "3.7.1",
-    "core-js": "3.22.5",
-    "primeflex": "3.1.2",
-    "primeicons": "5.0.0",
+    "core-js": "^3.22.5",
+    "primeflex": "3.2.0",
+    "primeicons": "^5.0.0",
     "primevue": "^3.12.6",
     "prismjs": "1.28.0"
   }
