--- a/package.json
+++ b/package.json
@@ -8,25 +8,42 @@
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
-  "devDependencies": {
-    "@antfu/eslint-config": "0.26.1",
-    "@nuxtjs/eslint-config-typescript": "10.0.0",
-    "@vueuse/components": "9.1.0",
-    "@vueuse/nuxt": "9.1.0",
-    "eslint": "8.21.0",
-    "eslint-plugin-nuxt": "3.2.0",
-    "nuxt": "3.0.0-rc.7",
-    "patch-vue-directive-ssr": "0.0.1",
-    "sass": "1.54.3",
-    "sass-loader": "12.6.0",
-    "typescript": "4.7.4"
-  },
   "dependencies": {
-    "chart.js": "3.9.1",
-    "core-js": "3.24.1",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
-    "primevue": "3.15.0",
-    "prismjs": "1.28.0"
+    "primevue": "3.15.0"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.0.0-rc.8",
+    "@nuxtjs/eslint-config-typescript": "latest",
+    "@testing-library/vue": "latest",
+    "@types/node": "^18.7.2",
+    "@types/serialize-javascript": "^5.0.2",
+    "@vue/compiler-sfc": "latest",
+    "@vueuse/components": "latest",
+    "@vueuse/nuxt": "latest",
+    "@whoj/utils": "latest",
+    "chart.js": "3.9.1",
+    "core-js": "latest",
+    "eslint": "8.21.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "nuxt": "^3.0.0-rc.8",
+    "prismjs": "1.28.0",
+    "sass": "^1.54.4",
+    "sass-loader": "13.0.2",
+    "typescript": "4.7.4",
+    "vite": "latest",
+    "vitest": "latest",
+    "vue": "latest",
+    "webpack": "latest"
+  },
+  "pnpm": {
+    "overrides": {
+      "unplugin": "latest"
+    }
+  },
+  "packageManager": "pnpm@7.9.0",
+  "engines": {
+    "node": "^14.16 || >=16.14"
   }
 }
