vercel preset added

--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
     }
   },
   "engines": {
-    "node": "^14.16 || >=16.14",
-    "npm": ">=8.10",
-    "pnpm": ">=7.6"
+    "node": "^14.16 || >=16.14"
   }
 }
