--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,8 @@
 {
-  "extends": [
-    "config:base"
-  ],
   "packageRules": [
     {
-      "packageNames": ["@nuxt/kit", "@nuxt/nitro", "@nuxt/schema"],
-      "groupName": "Nuxt TypeScript core packages"
+      "matchUpdateTypes": ["minor", "patch", "digest"],
+      "automerge": true
     }
   ]
 }
