--- a/package.json
+++ b/package.json
@@ -4,41 +4,42 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
+    "prepare": "nuxi cleanup && nuxi prepare",
     "start": "node .output/server/index.mjs",
     "test": "vitest -c vitest.config.ts",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
-    "lint:fix": "eslint --fix --ext .js,.ts,.vue --ignore-path .gitignore ."
+    "lint": "eslint \"{**/*,*}.{js,ts,tsx,vue}\"",
+    "lint:fix": "pnpm run lint --fix"
   },
   "dependencies": {
-    "pinia": "^2.0.21"
+    "pinia": "^2.0.22"
   },
   "devDependencies": {
-    "@pinia/nuxt": "^0.4.1",
-    "@pinia/testing": "^0.0.14",
-    "@nuxt/test-utils": "^3.0.0-rc.8",
+    "@nuxt/test-utils": "3.0.0-rc.11",
     "@nuxtjs/eslint-config-typescript": "latest",
+    "@pinia/nuxt": "^0.4.2",
+    "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.7.18",
     "@types/serialize-javascript": "^5.0.2",
-    "@vue/compiler-sfc": "latest",
-    "@vueuse/components": "latest",
-    "@vueuse/nuxt": "latest",
-    "@whoj/utils": "latest",
+    "@vue/compiler-sfc": "^3.2.39",
+    "@vueuse/components": "^9.2.0",
+    "@vueuse/nuxt": "^9.2.0",
+    "@whoj/utils": "^0.1.0",
     "chart.js": "3.9.1",
-    "core-js": "latest",
+    "core-js": "^3.25.2",
     "eslint": "latest",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "^3.0.0-rc.8",
+    "nuxt": "3.0.0-rc.11",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primevue": "3.16.2",
     "prismjs": "1.29.0",
-    "sass": "^1.54.6",
+    "sass": "^1.55.0",
     "sass-loader": "13.0.2",
     "typescript": "4.8.2",
-    "vite": "latest",
-    "vitest": "latest",
-    "vue": "latest",
+    "vite": "^3.1.3",
+    "vitest": "^0.23.4",
+    "vue": "^3.2.39",
     "webpack": "latest"
   },
   "pnpm": {
@@ -48,7 +49,7 @@
       "@typescript-eslint/typescript-estree": "^5.36.1"
     }
   },
-  "packageManager": "pnpm@7.9.5",
+  "packageManager": "pnpm@7.12.2",
   "engines": {
     "node": "^14.18 || >=16.15"
   }
