--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@pinia/nuxt": "^0.4.2",
     "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.7.18",
+    "@types/node": "^18.8.3",
     "@types/serialize-javascript": "^5.0.2",
-    "@vue/compiler-sfc": "^3.2.39",
-    "@vueuse/components": "^9.2.0",
-    "@vueuse/nuxt": "^9.2.0",
-    "@whoj/utils": "^0.1.0",
+    "@vue/compiler-sfc": "^3.2.40",
+    "@vueuse/components": "^9.3.0",
+    "@vueuse/nuxt": "^9.3.0",
+    "@whoj/eslint-config": "latest",
+    "@whoj/utils": "latest",
     "chart.js": "3.9.1",
-    "core-js": "^3.25.2",
-    "eslint": "latest",
+    "core-js": "^3.25.5",
+    "eslint": "^8.25.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "3.0.0-rc.11",
     "primeflex": "3.2.1",
@@ -35,11 +36,11 @@
     "primevue": "3.17.0",
     "prismjs": "1.29.0",
     "sass": "^1.55.0",
-    "sass-loader": "13.0.2",
-    "typescript": "4.8.3",
-    "vite": "^3.1.3",
-    "vitest": "^0.23.4",
-    "vue": "^3.2.39",
+    "sass-loader": "13.1.0",
+    "typescript": "4.8.4",
+    "vite": "^3.1.6",
+    "vitest": "^0.24.0",
+    "vue": "^3.2.40",
     "webpack": "latest"
   },
   "pnpm": {
@@ -47,10 +48,13 @@
       "unplugin": "latest",
       "@typescript-eslint/parser": "^5.36.1",
       "@typescript-eslint/typescript-estree": "^5.36.1"
+    },
+    "peerDependencyRules": {
+      "allowAny": ["primeicons"]
     }
   },
-  "packageManager": "pnpm@7.12.2",
+  "packageManager": "pnpm@7.13.2",
   "engines": {
-    "node": "^14.18 || >=16.15"
+    "node": "^14.19 || >=16.16"
   }
 }
