--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
+    "allowJs": true,
+    "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
   }
 }
