--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "lint:fix": "pnpm run lint --fix"
   },
   "dependencies": {
-    "pinia": "^2.0.22"
+    "pinia": "^2.0.23"
   },
   "devDependencies": {
     "@nuxt/test-utils": "3.0.0-rc.11",
     "@nuxtjs/eslint-config-typescript": "latest",
-    "@pinia/nuxt": "^0.4.2",
+    "@pinia/nuxt": "^0.4.3",
     "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.8.3",
+    "@types/node": "^18.8.4",
     "@types/serialize-javascript": "^5.0.2",
     "@vue/compiler-sfc": "^3.2.40",
     "@vueuse/components": "^9.3.0",
+    "@vueuse/core": "^9.3.0",
     "@vueuse/nuxt": "^9.3.0",
     "@whoj/eslint-config": "latest",
     "@whoj/utils": "latest",
@@ -38,8 +39,8 @@
     "sass": "^1.55.0",
     "sass-loader": "13.1.0",
     "typescript": "4.8.4",
-    "vite": "^3.1.6",
-    "vitest": "^0.24.0",
+    "vite": "^3.1.7",
+    "vitest": "^0.24.1",
     "vue": "^3.2.40",
     "webpack": "latest"
   },
@@ -50,10 +51,12 @@
       "@typescript-eslint/typescript-estree": "^5.36.1"
     },
     "peerDependencyRules": {
-      "allowAny": ["primeicons"]
+      "allowAny": [
+        "primeicons"
+      ]
     }
   },
-  "packageManager": "pnpm@7.13.2",
+  "packageManager": "pnpm@7.13.4",
   "engines": {
     "node": "^14.19 || >=16.16"
   }
