--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "pinia": "^2.0.23"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "3.0.0-rc.11",
+    "@nuxt/test-utils": "3.0.0-rc.12",
     "@nuxtjs/eslint-config-typescript": "latest",
     "@pinia/nuxt": "^0.4.3",
     "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.8.4",
+    "@types/node": "^18.11.2",
     "@types/serialize-javascript": "^5.0.2",
-    "@vue/compiler-sfc": "^3.2.40",
-    "@vueuse/components": "^9.3.0",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/nuxt": "^9.3.0",
+    "@vue/compiler-sfc": "^3.2.41",
+    "@vueuse/components": "^9.3.1",
+    "@vueuse/core": "^9.3.1",
+    "@vueuse/nuxt": "^9.3.1",
     "@whoj/eslint-config": "latest",
-    "@whoj/utils": "latest",
+    "@whoj/utils": "^1.0.0",
     "chart.js": "3.9.1",
     "core-js": "^3.25.5",
     "eslint": "^8.25.0",
@@ -39,9 +39,9 @@
     "sass": "^1.55.0",
     "sass-loader": "13.1.0",
     "typescript": "4.8.4",
-    "vite": "^3.1.7",
-    "vitest": "^0.24.1",
-    "vue": "^3.2.40",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3",
+    "vue": "^3.2.41",
     "webpack": "latest"
   },
   "pnpm": {
@@ -56,7 +56,7 @@
       ]
     }
   },
-  "packageManager": "pnpm@7.13.4",
+  "packageManager": "pnpm@7.13.5",
   "engines": {
     "node": "^14.19 || >=16.16"
   }
