fix: Public directory issue fixed 🐛
Closes #81

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
-shamefully-hoist=true
-strict-peer-dependencies=false
-registry=https://registry.npmjs.org
+shamefully-hoist = true
+public-hoist-pattern = true
+resolution-mode = time-based
+strict-peer-dependencies = false
+registry = https://registry.npmjs.org
