--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
     "pinia": "^2.0.23"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "3.0.0-rc.12",
+    "@nuxt/test-utils": "^3.0.0-rc.13",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@pinia/nuxt": "^0.4.3",
     "@pinia/testing": "^0.0.14",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.11.2",
+    "@types/node": "^18.11.9",
     "@types/serialize-javascript": "^5.0.2",
     "@vue/compiler-sfc": "^3.2.41",
-    "@vueuse/components": "^9.3.1",
-    "@vueuse/core": "^9.3.1",
-    "@vueuse/nuxt": "^9.3.1",
+    "@vueuse/components": "^9.4.0",
+    "@vueuse/core": "^9.4.0",
+    "@vueuse/nuxt": "^9.4.0",
     "@whoj/eslint-config": "^1.0.1",
     "@whoj/utils": "^1.0.0",
     "chart.js": "3.9.1",
-    "core-js": "^3.25.5",
-    "eslint": "^8.25.0",
+    "core-js": "^3.26.0",
+    "eslint": "^8.26.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "^3.0.0-rc.13",
     "primeflex": "3.2.1",
     "primeicons": "6.0.1",
     "primevue": "3.18.0",
     "prismjs": "1.29.0",
-    "sass": "^1.55.0",
+    "sass": "^1.56.0",
     "sass-loader": "13.1.0",
     "typescript": "4.8.4",
-    "vite": "^3.1.8",
-    "vitest": "^0.24.3",
+    "vite": "^3.2.2",
+    "vitest": "^0.24.5",
     "vue": "^3.2.41",
     "webpack": "^5.74.0"
   },
@@ -56,7 +56,7 @@
       ]
     }
   },
-  "packageManager": "pnpm@7.14.0",
+  "packageManager": "pnpm@7.14.2",
   "engines": {
     "node": "^14.20 || >=16.18"
   }
