--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@testing-library/vue": "latest",
     "@types/node": "^18.11.9",
     "@types/serialize-javascript": "^5.0.2",
-    "@vue/compiler-sfc": "^3.2.41",
-    "@vueuse/components": "^9.4.0",
-    "@vueuse/core": "^9.4.0",
-    "@vueuse/nuxt": "^9.4.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "@vueuse/components": "^9.5.0",
+    "@vueuse/core": "^9.5.0",
+    "@vueuse/nuxt": "^9.5.0",
     "@whoj/eslint-config": "^1.0.1",
     "@whoj/utils": "^1.0.0",
     "chart.js": "3.9.1",
-    "core-js": "^3.26.0",
-    "eslint": "^8.26.0",
+    "core-js": "^3.26.1",
+    "eslint": "^8.27.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "^3.0.0-rc.13",
-    "primeflex": "3.3.0",
+    "primeflex": "^3.3.0",
     "primeicons": "6.0.1",
-    "primevue": "3.18.0",
+    "primevue": "^3.18.1",
     "prismjs": "1.29.0",
     "sass": "^1.56.0",
-    "sass-loader": "13.2.0",
-    "typescript": "4.8.4",
-    "vite": "^3.2.2",
+    "sass-loader": "^13.2.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.3",
     "vitest": "^0.25.0",
-    "vue": "^3.2.41",
-    "webpack": "^5.74.0"
+    "vue": "^3.2.45",
+    "webpack": "^5.75.0"
   },
   "pnpm": {
     "overrides": {
