--- a/package.json
+++ b/package.json
@@ -39,17 +39,18 @@
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4",
     "vitest": "^0.25.3",
     "vue": "^3.2.45",
     "webpack": "^5.75.0"
   },
   "pnpm": {
     "allowedDeprecatedVersions": {
-      "stable": "*"
+      "stable": "*",
+      "rollup-plugin-terser": "*"
     },
     "overrides": {
-      "unplugin": "latest"
+      "esbuild": "^0.16.4",
+      "sourcemap-codec": "npm:@jridgewell/sourcemap-codec@latest"
     },
     "peerDependencyRules": {
       "allowAny": [
@@ -59,7 +60,7 @@
   },
   "packageManager": "pnpm@7.18.1",
   "engines": {
-    "node": "^14.20 || ^16.18.1"
+    "node": ">=16.18"
   },
   "homepage": "https://github.com/who-jonson/sakai-nuxt#readme",
   "repository": {
