--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "allowJs": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
