--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
-    "pinia": "^2.0.30"
+    "pinia": "^2.0.34"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "^3.1.0",
+    "@nuxt/test-utils": "^3.4.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@pinia/nuxt": "^0.4.5",
-    "@pinia/testing": "^0.0.15",
+    "@pinia/nuxt": "^0.4.8",
+    "@pinia/testing": "^0.0.16",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.15.11",
     "@types/serialize-javascript": "^5.0.2",
     "@vue/compiler-sfc": "^3.2.47",
-    "@vueuse/components": "^9.12.0",
-    "@vueuse/core": "^9.12.0",
-    "@vueuse/nuxt": "^9.12.0",
-    "@whoj/eslint-config": "^1.2.0",
-    "@whoj/utils": "^1.5.0",
+    "@vueuse/components": "^10.0.0",
+    "@vueuse/core": "^10.0.0",
+    "@vueuse/nuxt": "^10.0.0",
+    "@whoj/eslint-config": "^1.4.0",
+    "@whoj/utils": "^1.7.3",
     "chart.js": "4.2.1",
-    "core-js": "^3.27.2",
-    "eslint": "^8.33.0",
-    "nuxt": "^3.1.0",
-    "primeflex": "^3.2.1",
+    "core-js": "^3.30.1",
+    "eslint": "^8.38.0",
+    "nuxt": "^3.4.1",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
-    "primevue": "^3.22.1",
+    "primevue": "^3.26.1",
     "prismjs": "1.29.0",
-    "sass": "^1.58.0",
-    "typescript": "^5.0.0",
-    "vitest": "^0.29.0",
+    "sass": "^1.62.0",
+    "typescript": "^5.0.4",
+    "vitest": "^0.30.1",
     "vue": "^3.2.47"
   },
   "pnpm": {
@@ -47,7 +47,8 @@
       "rollup-plugin-terser": "*"
     },
     "overrides": {
-      "esbuild": "^0.16.4",
+      "esbuild": "^0.17.16",
+      "vue-demi": "^0.14.0",
       "sourcemap-codec": "npm:@jridgewell/sourcemap-codec@latest"
     },
     "peerDependencyRules": {
@@ -56,7 +57,7 @@
       ]
     }
   },
-  "packageManager": "pnpm@8.1.0",
+  "packageManager": "pnpm@8.2.0",
   "engines": {
     "node": "^18.12"
   },
