--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "devDependencies": {
     "@nuxt/test-utils": "^3.4.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/google-fonts": "^3.0.0",
     "@pinia/nuxt": "^0.4.8",
     "@pinia/testing": "^0.0.16",
     "@testing-library/vue": "latest",
     "@types/node": "^18.15.11",
     "@types/serialize-javascript": "^5.0.2",
+    "@vite-pwa/nuxt": "^0.0.7",
+    "@vue-macros/nuxt": "^1.2.8",
     "@vue/compiler-sfc": "^3.2.47",
     "@vueuse/components": "^10.0.0",
     "@vueuse/core": "^10.0.0",
@@ -32,6 +35,8 @@
     "core-js": "^3.30.1",
     "eslint": "^8.38.0",
     "nuxt": "^3.4.1",
+    "nuxt-icon": "^0.3.3",
+    "nuxt-typed-router": "^3.1.3",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.1",
