--- a/package.json
+++ b/package.json
@@ -3,48 +3,43 @@
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
-    "build": "nuxi build",
+    "build": "NITRO_PRESET=vercel nuxi build",
     "generate": "nuxi generate",
-    "prepare": "nuxi cleanup && nuxi prepare",
+    "postinstall": "nuxi prepare",
     "start": "node .output/server/index.mjs",
     "test": "vitest -c vitest.config.ts",
     "lint": "eslint \"{**/*,*}.{js,ts,tsx,vue}\"",
     "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
-    "pinia": "^2.0.34"
+    "pinia": "^2.1.7"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "^3.4.1",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/google-fonts": "^3.0.0",
-    "@pinia/nuxt": "^0.4.8",
-    "@pinia/testing": "^0.1.0",
+    "@nuxt/test-utils": "^3.8.1",
+    "@nuxtjs/google-fonts": "^3.0.1",
+    "@pinia/nuxt": "^0.5.1",
+    "@pinia/testing": "^0.1.3",
     "@testing-library/vue": "latest",
-    "@types/node": "^18.15.11",
+    "@types/node": "^20.10.0",
     "@types/serialize-javascript": "^5.0.2",
-    "@vite-pwa/nuxt": "^0.1.0",
-    "@vue-macros/nuxt": "^1.2.8",
-    "@vue/compiler-sfc": "^3.2.47",
-    "@vueuse/components": "^10.0.0",
-    "@vueuse/core": "^10.0.0",
-    "@vueuse/nuxt": "^10.0.0",
-    "@whoj/eslint-config": "^1.4.0",
-    "@whoj/utils": "^1.7.3",
-    "chart.js": "4.4.0",
-    "core-js": "^3.30.1",
-    "eslint": "^8.38.0",
-    "nuxt": "^3.4.1",
-    "nuxt-icon": "^0.5.0",
-    "nuxt-typed-router": "^3.1.4",
-    "primeflex": "^3.3.0",
+    "@vite-pwa/nuxt": "^0.2.3",
+    "@vueuse/components": "^10.6.1",
+    "@vueuse/core": "^10.6.1",
+    "@vueuse/nuxt": "^10.6.1",
+    "@whoj/eslint-config": "^1.5.0",
+    "@whoj/utils": "^1.8.0",
+    "chart.js": "^4.4.0",
+    "core-js": "^3.31.0",
+    "eslint": "^8.54.0",
+    "nuxt": "^3.8.2",
+    "nuxt-icon": "^0.6.6",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.26.1",
-    "prismjs": "1.29.0",
-    "sass": "^1.62.0",
-    "typescript": "^5.0.4",
-    "vitest": "^0.34.0",
-    "vue": "^3.2.47"
+    "primevue": "^3.41.1",
+    "prismjs": "^1.29.0",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.2",
+    "vitest": "^0.34.6"
   },
   "pnpm": {
     "allowedDeprecatedVersions": {
@@ -52,19 +47,20 @@
       "rollup-plugin-terser": "*"
     },
     "overrides": {
-      "esbuild": "^0.17.16",
-      "vue-demi": "^0.14.0",
+      "core-js": "$core-js",
       "sourcemap-codec": "npm:@jridgewell/sourcemap-codec@latest"
     },
     "peerDependencyRules": {
       "allowAny": [
+        "rollup",
+        "vitest",
         "primeicons"
       ]
     }
   },
-  "packageManager": "pnpm@8.8.0",
+  "packageManager": "pnpm@8.10.5",
   "engines": {
-    "node": "^18.12"
+    "node": ">=18"
   },
   "homepage": "https://github.com/who-jonson/sakai-nuxt#readme",
   "repository": {
